# fmu-simulator-app

./: .app_id.txt  Dockerfile  README.md  app.py  numerous.toml  pyproject.toml  requirements.txt
fmu/: fmu.py
